unpackaged/main/default/objects/Student1__c/fields/Highest_Scoring_Subject__c.field-meta.xml
<CustomField>
    <fullName>Highest_Scoring_Subject__c</fullName>
    <label>Highest Scoring Subject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>