unpackaged/main/default/objects/Student1__c/fields/Lowest_Scoring_Subject__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Scoring_Subject__c</fullName>
    <label>Lowest Scoring Subject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>