unpackaged/main/default/objects/Student1__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <label>Total Marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>